Fix promo section on mobile

--- a/src/app/pages/home/home.css
+++ b/src/app/pages/home/home.css
@@ -95,6 +95,7 @@ a.learn-more {
 
 .promo {
   flex: 1 0 auto;
+  width: 100%;
   height: 400px;
   text-align: center;
   background-position: center;
@@ -119,6 +120,10 @@ a.learn-more {
 .promo-women {
   composes: promo;
   background-image: url('../../../img/shop-women.jpg');
+  margin-bottom: 40px;
+  @media (--larger-than-tablet) {
+    margin-bottom: 0px;
+  }
 }
 
 .promo-men {
